--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@ description: A blog
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/74824381_p0.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
+url: https://zuewang.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
