update profile image

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/74824381_p0.jpg
+picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -42,7 +42,7 @@ twitter: mytwitter
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: zuewang
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
@@ -51,7 +51,7 @@ github: mygithub
 medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: 240501541@qq.com
 
 authors:
     johndoe:
